changed the text of the webpage

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome Path To College students!</h1>
+    <h1>My name is Michelle</h1>
+    <h2>
+    I love dogs
+    </h2>
+    <h3>
+    Especially my dogs!
+    </h3>
 </body>
 </html>
