--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Document</title>
 </head>
+
 <body>
-    <h1>My name is Michelle</h1>
-    <h2>
-    I love dogs
-    </h2>
-    <h3>
-    Especially my dogs!
-    </h3>
+  <h1>Michelle Bakels</h1>
+  <h2>About me</h2>
+  <p class="description">Dream college:</p>
+  <p>Biggest inspiration:</p>
+  <p>Favorite quote:</p>
 </body>
+
 </html>
